Kubernetes/Flask app/flask-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-svc
  namespace: my-microservice-app
  labels:
    app: flask
spec:
  selector:
    app: flask
  ports:
  - name: flask-svc-port
    port: 80
    targetPort: http-flask
